Fix username wrapping around in chat replay

--- a/daiseihai/assets/stylesheets/style.scss
+++ b/daiseihai/assets/stylesheets/style.scss
@@ -112,6 +112,9 @@ nav {
         margin-right: 5px;
         vertical-align: middle;
     }
+    .user-info {
+        display: inline-block;
+    }
 }
 
 .grid-wrapper {
